force-app/main/default/objects/Event_X_Action__c/Event_X_Action__c.object-meta.xml
<CustomObject>
    <label>Event By Action</label>
    <nameField>
        <displayFormat>ExA-{0000}</displayFormat>
        <label>Event X Action Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events By Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>