force-app/main/default/objects/Event_X_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Actions By Events</relationshipLabel>
    <relationshipName>Actions_X_Events</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>