force-app/main/default/objects/Event_X_Action__c/fields/ActiveEvent__c.field-meta.xml
<CustomField>
    <fullName>ActiveEvent__c</fullName>
    <formula>Event__r.ActiveEvent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Event</label>
    <type>Checkbox</type>
</CustomField>