force-app/main/default/objects/Event_X_Action__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&#39;NO_ID_YET&#39;</defaultValue>
    <description>18 + | + 18 = 37</description>
    <label>Unique Key</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>